Spring_quarter_2018/codes_exp/error/105.err
  File "aqua_const_depth.py", line 60
    'current_date' : [0001,1,1,0,0,0],
                         ^
SyntaxError: invalid token
